# shaat-web-stack-rust

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  run_local.sh
.sqlx/: query-48f96d92dab1d9b7d93b6d9cf7dc40459de94c3b874d4fcb8bec48fa5f395437.json  query-5917978ca39d3ec7e61402fafe39ba11915744a3534d6d266c9cf521b5eac184.json  query-c428511b430b8b10f26764df87c78024e6cfbcf578276346a648c73b3f1fb067.json  query-dc5504a437ed0850903b229faa999b2169490f3ba320921abdda809c3e99f6eb.json  query-ea49b1f9ae7f2303021374208406caf61f27392d16ff0bd1038ba78a5ac4f5af.json
migrations/: 0001_init.sql
scripts/: backend_dev.sh  frontend_dev.sh
src/: askama_to_actix_responder.rs  main.rs  pages.rs  services.rs
src/middleware/: jwt_session.rs  mod.rs
src/pages/: index.rs  login.rs  mod.rs  profile.rs  register.rs  todos.rs
src/repositories/: in_memory_todo_repository.rs  in_memory_user_repository.rs  mod.rs  sql_todo_repository.rs  sql_user_repository.rs  sqlx_error_mapper.rs  todo_repository.rs  user_repository.rs
src/services/: auth_service.rs  db_auth_service.rs  mod.rs  todo_service.rs
src/utils/: askama_to_actix_responder.rs  global_auth.rs  mod.rs  service_error_http_response.rs
static/: style.css
templates/: hello.html  login.html  profile.html  register.html  todos.html
