[package]
name = "actix-html-templates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
actix-web-httpauth = "0.8.0"
argonautica = "0.2.0"
askama = { version = "0.12.0" }
async-trait = "0.1.71"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
hmac = "0.12.1"
jwt = "0.16.0"
serde = "1.0.171"
serde_json = "1.0.102"
sha2 = "0.10.7"
thiserror = "1.0.43"
tokio = "1.29.1"
uuid = { version = "1.4.0", features = ["v4"] }
